tests/snapshots/wallets/derive_next_address/no_params.snap
---
source: tests/common/perform_cmd.rs
assertion_line: 38
info:
  program: kermit
  args:
    - wallets
    - derive-next-address
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
error: the following required arguments were not provided:
  <WALLET_NAME>

Usage: kermit wallets derive-next-address <WALLET_NAME>

For more information, try '--help'.
